--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,6 @@
         "@babel/preset-typescript",
         "@babel/preset-react",
         "@babel/preset-env"
-    ]
+    ],
+    "plugins": [["@babel/plugin-transform-runtime", { "regenerator": true }]]
 }
