--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@babel/preset-env": "^7.16.11",
         "@babel/preset-react": "^7.16.7",
         "@babel/preset-typescript": "^7.16.7",
+        "@babel/runtime": "^7.17.0",
+        "@types/node": "^17.0.16",
         "@types/react": "^15.0.0 || ^16.0.0 || ^17.0.0 ",
         "@types/react-dom": "^17.0.11",
         "@types/react-router-dom": "^5.3.3",
