--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "react-cookie": "^4.1.1",
         "react-dom": "^15.0.0 || ^16.0.0 || ^17.0.0 ",
         "react-hot-loader": "^4.13.0",
+        "react-hot-toast": "^2.2.0",
         "react-router-dom": "^6.2.1",
         "styled-components": "^5.3.3",
         "styled-reset": "^4.3.4",
