랜딩 페이지 리다이렉트 설정

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,13 @@
   query = {code = ":code"}
 
 [[redirects]]
+  from = "*"
+  to = "redirect"
+  status = 200
+  force = true
+  query = {voteId = ":voteId"}
+
+[[redirects]]
   from = "/*"
-  to = "/index.html"
+  to = "/"
   status = 200
