--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
         "styled-components": "^5.3.3",
         "styled-reset": "^4.3.4",
         "typescript": "^4.5.5"
+    },
+    "dependencies": {
+        "react-ga": "^3.3.0"
     }
 }
