--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-router-dom": "^6.2.1",
         "styled-components": "^5.3.3",
         "styled-reset": "^4.3.4",
+        "swiper": "6.8.4",
         "typescript": "^4.5.5"
     },
     "dependencies": {
